--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Momentum</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
     <form class="js-form form">
       <input type="Text" placeholder="What's your name?" />
     </form>
-    <h4 class="js-greetings greetings"></h4> 
+    <h4 class="js-greetings greetings"></h4>
 
     <form class="js-toDoForm">
       <input type="text" placeholder="Write a to do" />
@@ -38,11 +38,11 @@
       </div>
     </div>
 
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="bg.js"></script>
-    <script src="weather.js"></script>
-    <script src="calendar.js"></script>
+    <script src="../js/clock.js"></script>
+    <script src="../js/greeting.js"></script>
+    <script src="../js/todo.js"></script>
+    <script src="../js/background.js"></script>
+    <script src="../js/weather.js"></script>
+    <script src="../js/calendar.js"></script>
   </body>
 </html>
